# VeriPura-System

./: .gitignore  README.md  TECHNICAL_REPORT.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml  qr_base64.txt  qr_test.html  render.yaml  requirements.txt  test.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260215_0001_initial_schema.py  20260216_0002_user_auth_fields.py
backend/app/: config.py  logger.py  main.py
backend/app/auth/: __init__.py  google_oauth.py  security.py
backend/app/db/: models.py  session.py
backend/app/infra/: batch_id.py  ledger.py  qr_generator.py  storage.py
backend/app/middleware/: cache.py  request_id.py
backend/app/ml/: features.py  model_loader.py  parser.py  pipeline.py  rules.py
backend/app/routes/: auth.py  health.py  qr.py  shipments.py  upload.py  verify.py
backend/app/schemas/: auth.py  consistency_graph.py  ledger.py  upload.py  validation.py
backend/app/services/: auth_service.py  document_service.py  verification_service.py
backend/models/: model_v2_metadata.json  training_data.csv  training_metadata.json
backend/scripts/: export_openapi.py  export_training_data.py  retrain_model.py  train_model.py
backend/tests/: conftest.py  test_api_integration.py  test_ledger.py  test_ml_pipeline.py  test_performance.py  test_qr.py  test_storage.py
docs/: openapi.json
frontend/: .env.example  .env.production  .gitignore  index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.jsx  App.module.css
frontend/src/api/: client.js  services.js
frontend/src/auth/: token.js
frontend/src/components/: Button.jsx  Button.module.css  Card.module.css  ConsistencyGraph.jsx  ConsistencyGraph.module.css  FileUpload.jsx  FileUpload.module.css  LoadingSpinner.jsx  LoadingSpinner.module.css  UploadResult.jsx  UploadResult.module.css
frontend/src/pages/: AuthPage.jsx  AuthPage.module.css  DashboardPage.jsx  DashboardPage.module.css  GoogleCallbackPage.jsx  GoogleCallbackPage.module.css  UploadPage.jsx  UploadPage.module.css  VerifyPage.jsx  VerifyPage.module.css
frontend/src/styles/: global.css
