[tool.poetry]
name = "veripura-backend"
version = "0.1.0"
description = "Production-grade supply chain verification system with AI-based document validation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
pymupdf = "^1.26.7"
pillow = "^12.1.0"
pytesseract = "^0.3.13"
pandas = "^3.0.0"
scikit-learn = "^1.8.0"
numpy = "^2.4.2"
reportlab = "^4.4.9"
qrcode = {extras = ["pil"], version = "^8.2"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.26.0"
black = "^23.12.0"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]